--- a/src/index.css
+++ b/src/index.css
@@ -48,9 +48,11 @@ body {
 }
 
 .navbox .rightside {
-    font-size: 12px;
+    font-size: 22px;
     font-weight: 600;
     position: relative;
+    right:50px;
+    width: 150px;
 }
 
 .navbox .rightside span {
@@ -60,6 +62,12 @@ body {
 .navbox .rightside span .navlink {
     text-decoration: none;
     color: #000;
+    height: 30px;
+    width: 30px;
+}
+.navbox .rightside span .navlink .icon{
+width: 30px;
+height: 30px;
 }
 
 .navbox .rightside .no-of-products {
@@ -68,12 +76,12 @@ body {
     font-size: 10px;
     font-weight: 600;
     padding: 2px;
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     border-radius: 3px;
     position: absolute;
     top: -5px;
-    left: 60px;
+    left: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -174,7 +182,24 @@ h1 {
     font-size: 14px;
     font-weight: 600;
 }
+.container{
+    margin: 50px auto;
+    width: 50% !important;
+}
+.img-cont{
+    width: 100px;
+    height: 100px;
+}
+.img-cont img{
+    width: 100%;
+    height: 100%;
+}
+.loginn{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
+}
 .cart-container .cart-card {
     width: 100%;
     display: flex;
